--- a/estilos.css
+++ b/estilos.css
@@ -14,18 +14,18 @@
 	list-style: none;
 
 }
-.menu> li{
+menu> li{
 	position: relative;
 	display: inline-block;
 }
-.menu> li>a{
+menu> li>a{
 	display: block;
 	padding: 15px 20px;
 	color: #353535;
 	font-family:Open sans;
 	text-decoration: none;
 }
-.menu li a :hover{
+menu li a :hover{
 color: #CE7D35;
 transition: all .3s;
 }
@@ -46,7 +46,7 @@ transition: all .3s;
 	text-decoration: none;
 }
 
-.menu li :hover.submenu{
+menu li :hover.submenu{
 	visibility: visible;
 	opacity: 1;
 
