--- a/estilos.css
+++ b/estilos.css
@@ -5,12 +5,12 @@
 
 } */
 
-.navegacion{
+nav{
 	width: 100px;
 	margin: 30px auto;
 	background:#F47920;
 }
-.navegacion ul{
+nav{
 	list-style: none;
 
 }
