--- a/estilos.css
+++ b/estilos.css
@@ -4,13 +4,12 @@
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
-	
 } 
 
-nav{
+.navegacion{
 	width: 1000px;
 	margin: 30px auto;
-	background:#F47920;
+	background:#20f42b;
 }
 .navegacion ul{
 	list-style: none;
@@ -49,10 +48,13 @@ transition: all .3s;
 }
 
 menu li :hover.submenu{
+
 	visibility: visible;
 	opacity: 1;
 
 }
+
+
 
 
  
