--- a/estilos.css
+++ b/estilos.css
@@ -6,12 +6,12 @@
 	box-sizing: border-box;
 } 
 
-.navegacion{
+nav{
 	width: 1000px;
 	margin: 30px auto;
 	background:#20f42b;
 }
-.navegacion ul{
+nav ul{
 	list-style: none;
 
 }
