--- a/estilos.css
+++ b/estilos.css
@@ -1,37 +1,28 @@
  *{
-	margin: 5;
-	padding: 5;
+	margin: 0;
+	padding: 0;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 } 
 
-.nav{
-	width: 1000px;
-	margin: 30px auto;
-	background:#2083f4;
+body{
+	font-family:'Raleway';
+	font-size: 16px;
 }
-.navegacion ul{
-	list-style: none;
 
+header nav{
+	
+	/* width: 1000px; */
+	/* margin: 30px auto; */
+	height: 70px;
+	background:#20f420;
+	display: flex;
+	justify-content: space-between;
 }
-menu > li{
-	position: relative;
-	display: inline-block;
-}
-menu> li>a{
-	display: block;
-	padding: 15px 20px;
-	color: #fff;
-	font-family:Open sans;
-	text-decoration: none;
-}
-menu li a :hover{
-color: #CE7D35;
-transition: all .3s;
-}
+
 /*Submenu*/
-.submenu{
+/* .enlacesdos{
 	position: absolute;
 	background: #333333;
 	width: 120%;
@@ -45,20 +36,7 @@ transition: all .3s;
 	color: #fff;
 	font-family: Open sans;
 	text-decoration: none;
-}
-
-menu li :hover.submenu{
-
-	visibility: visible;
-	opacity: 1;
-
-}
-
-
-
-
- 
-
+} */
 
 h1{
 color:#005883;
