--- a/estilos.css
+++ b/estilos.css
@@ -21,7 +21,30 @@ header nav{
 	justify-content: space-between;
 }
 
-/*Submenu*/
+.enlaces{
+	display: flex;
+	height: 100%;
+	width: 30%;
+	justify-content: space-around;
+	align-items: center;
+}
+
+.enlaces a{
+	border-top: 1px solid transparent;
+	border-bottom: 1px solid transparent;
+	padding: 4px 0;
+	transition: 0.7 ease-out;
+	color: #fff;
+	text-decoration: none;
+
+}
+
+.enlaces a :hover, .active{
+	border-top: 1px solid coral;
+	border-bottom: 1px solid coral;
+	
+}
+/* Submenu
 .submenu{
 	position: absolute;
 	background: #333333;
@@ -36,7 +59,7 @@ header nav{
 	color: #fff;
 	font-family: Open sans;
 	text-decoration: none;
-} 
+}  */
 
 h1{
 color:#005883;
