--- a/estilos.css
+++ b/estilos.css
@@ -16,7 +16,7 @@ header nav{
 	/* width: 1000px; */
 	/* margin: 30px auto; */
 	
-	background:#6020f4;
+	background:#f4aa20;
 	display: flex;
 	justify-content: space-between;
 }
