--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,6 @@
  *{
-	margin: 0;
-	padding: 0;
+	margin: 30;
+	padding: 5;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
@@ -21,12 +21,14 @@ header nav{
 	justify-content: space-between;
 }
 
-.enlaces{
+.enlaces li a{
 	display: flex;
 	height: 100%;
 	width: 30%;
 	justify-content: space-around;
 	align-items: center;
+	border:1px solid;
+	padding:10px 12px;
 }
 
 .enlaces a{
@@ -39,9 +41,9 @@ header nav{
 
 }
 
-.enlaces a :hover, .active{
-	border-top: 1px solid coral;
-	border-bottom: 1px solid coral;
+.enlaces li a:hover {
+	border-top: 1px solid rgb(250, 246, 0);
+	border-bottom: 1px solid rgb(235, 252, 7);
 	
 }
 /* Submenu
