--- a/estilos.css
+++ b/estilos.css
@@ -13,7 +13,7 @@ body{
 
 header nav{
 	
-	width: 1000px; 
+	width: 2000px; 
 	margin: 1000px auto; 
 	font-size: 16px;
 	background:#0817df;
@@ -34,10 +34,11 @@ header nav{
 .enlaces a{
 	border-top: 1px solid transparent;
 	border-bottom: 1px solid transparent;
-	padding: 4px 0;
+	padding: 0;
 	transition: 0.7 ease-out;
 	color: #fff;
 	text-decoration: none;
+	list-style: none;
 
 }
 
