--- a/estilos.css
+++ b/estilos.css
@@ -24,7 +24,8 @@ header nav ul{
 }
 
 .enlaces li a{
-	display: flex;
+	display: inline-block;
+	text-align: center;
 	height: 100%;
 	width: 100%;
 	justify-content: space-around;
